bdr.BDR.scala.error
Compilation error:
BDR:32: error: Unmatched closing brace '}' ignored here
	}
        ^